# mergexo

./: .gitignore  README.md  mergexo.toml.example  pyproject.toml  roadmap_json_to_md.py  show_running_codex_log.py
.github/workflows/: ci.yml
docs/: design.md  python_style.md
docs/design/: 109-more-efficient-use-of-tokens.md  11-make-sure-agents-never-rewrite-git-history.md  110-abstract-the-codehost-provider.md  117-design-a-pr-takeover-story.md  128-flakey-test-support.md  131-mergexo-triggered-releases.md  132-a-mode-for-continuous-deploy.md  141-design-for-epics-or-multi-step-development.md  155-improve-roadmap-support.md  159-roadmap-separate-artifact-only-docs-from-design-to-implementation-nodes.md  162-roadmap-pass-dependency-artifacts-to-roadmap-child-workers.md  165-roadmap-teach-authoring-prompts-the-direct-dependency-handoff-contract.md  169-add-support-for-roadmaps-to-the-top-command.md  173-write-the-reviewed-design-for-standard-flow-code-review-support.md  180-design-a-flow-for-automatic-prompt-update.md  2-design-the-feedback-loop.md  (+16 more)
scripts/: test.sh
tests/: test_agent_adapter.py  test_cli.py  test_codex_adapter.py  test_config.py  test_default_mode.py  test_entrypoint.py  test_feedback_loop.py  test_git_ops.py  test_github_gateway.py  test_models_and_prompts.py  test_observability.py  test_observability_queries.py  test_observability_tui.py  test_orchestrator.py  test_process_lock.py  test_roadmap_markdown.py  test_roadmap_parser.py  test_roadmap_transition_validator.py  test_service_runner.py  test_shell.py  test_state.py  test_task_handlers.py
(+28 files in other folders)
