[project]
name = "mergexo"
version = "0.1.0"
description = "Local-first orchestrator for issue-driven design-doc PR generation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
mergexo = "mergexo.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
